[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jarasyola <jamraph10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
alembic = "^1.8.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
